--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
             <h1>Mortgage Trivia!</h1>
             <!-- hidden during gameplay - used to pop up after user responds to question or times out -->
             <div class="result"><button class="start-button">Click Here to Start!</button></div>
-            <p class="timer">Time Remaining: <span class="time-counter">8</span> Seconds</p>
-            <p class="question">Question</p>
+            <p class="timer hidden">Time Remaining: <span class="time-counter">12</span> Seconds</p>
+            <p class="question">The first question will appear here. You have 12 seconds to answer each question. Good luck!</p>
             <div class="answer-area">
                 <!-- answer divs will be dynamically built here -->
             </div>
